# erpera_driver_app

./: CLAUDE.md  DEPLOY.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
cowberry/: hooks.py  modules.txt  patches.txt  permissions.py
cowberry/api/: analytics.py  auth.py  cash_submission.py  chat.py  collection.py  delivery.py  driver.py  order.py  payment.py  trip.py  wallet.py
cowberry/cowberry_app/doctype/ccd_order_item/: ccd_order_item.json  ccd_order_item.py
cowberry/cowberry_app/doctype/cowberry_cash_submission/: cowberry_cash_submission.json  cowberry_cash_submission.py
cowberry/cowberry_app/doctype/cowberry_delivery_attempt_log/: cowberry_delivery_attempt_log.json  cowberry_delivery_attempt_log.py
cowberry/cowberry_app/doctype/cowberry_delivery_sync_log/: cowberry_delivery_sync_log.json
cowberry/patches/v0_0_2/: rename_module_to_cowberry_driver_app.py
cowberry/utils/: exceptions.py  geo.py  notifications.py  otp.py
erpera_driver_app/: hooks.py  install.py  modules.txt  patches.txt  permissions.py
erpera_driver_app/api/: analytics.py  auth.py  cash_submission.py  chat.py  collection.py  delivery.py  driver.py  order.py  otp.py  payment.py  pod.py  profile.py  trip.py  wallet.py
erpera_driver_app/fixtures/: custom_field.json
erpera_driver_app/patches/v0_0_2/: rename_module_to_cowberry_driver_app.py
erpera_driver_app/patches/v0_0_3/: rename_module_to_erpera_driver_app.py
erpera_driver_app/patches/v0_0_4/: rename_doctypes_drop_cowberry.py
erpera_driver_app/utils/: exceptions.py  geo.py  notifications.py  otp.py  response.py
scripts/: deploy.sh
(+52 files in other folders)
