[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cowberry"
authors = [
    { name = "Reformiqo", email = "consultant.reformiqo@gmail.com" }
]
description = "Cowberry Driver App ERP"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/reformiqo/cowberry_driver_app_erp"
