[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "erpera_driver_app"
authors = [
    { name = "Reformiqo", email = "consultant.reformiqo@gmail.com" }
]
description = "Erpera Driver App ERP"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
    # setuptools 81 removed pkg_resources, which Frappe's bundled dropbox
    # dep still imports at module load time. Pinning <81 keeps an older
    # setuptools (with pkg_resources) on the bench's venv so bench migrate
    # doesn't crash at "Updating DocTypes for frappe".
    "setuptools<81",
]

[project.urls]
Homepage = "https://github.com/reformiqo/cowberry_driver_app_erp"
